--- a/app/src/main/res/xml/deluxerom_remap_buttons.xml
+++ b/app/src/main/res/xml/deluxerom_remap_buttons.xml
@@ -1,116 +1,287 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:grx="http://schemas.android.com/apk/res-auto">
 
-    <!-- Recientes -->
-    <PreferenceScreen android:title="@string/recents">
-        <GrxSingleSelection
-            android:title="@string/long_press"
-            android:key="dlx_long_recent_action"
-            android:defaultValue="0"
-            grx:broadCast1="dlx_remap"
-            grx:optionsArray="@array/agc_virtual_buttons_entries"
-            grx:systemType="system"
-            grx:valuesArray="@array/agc_virtual_buttons_values" />
-        <GrxAppSelection
-            android:title="@string/app"
-            android:key="dlx_long_recent_app"
-            grx:systemType="system"
-            grx:depRule="ENABLE#dlx_long_recent_action#STRING#1"
-            grx:broadCast1="dlx_remap"
-            grx:saveActivityname="true"
-            grx:showSystemapps="false" />
-    </PreferenceScreen>
+    <!-- Screen on -->
+    <GrxPreferenceCategory android:title="@string/screen_on">
+        <!-- Recents -->
+        <PreferenceScreen android:title="@string/recents">
+            <!-- Short press -->
+            <!--<GrxSingleSelection
+                android:title="@string/long_press"
+                android:key="dlx_shortpress_recents"
+                android:defaultValue="0"
+                grx:broadCast1="deluxe_update_keys"
+                grx:optionsArray="@array/agc_virtual_buttons_entries"
+                grx:systemType="system"
+                grx:valuesArray="@array/agc_virtual_buttons_values" />
+            <GrxAppSelection
+                android:title="@string/app"
+                android:key="dlx_shortpress_recents_app"
+                grx:systemType="system"
+                grx:depRule="ENABLE#dlx_shortpress_recents#STRING#1"
+                grx:broadCast1="deluxe_update_keys"
+                grx:saveActivityname="true"
+                grx:showSystemapps="false" />-->
+            <!-- Long press -->
+            <GrxSingleSelection
+                android:title="@string/long_press"
+                android:key="dlx_longpress_recents"
+                android:defaultValue="0"
+                grx:broadCast1="deluxe_update_keys"
+                grx:optionsArray="@array/agc_virtual_buttons_entries"
+                grx:systemType="system"
+                grx:valuesArray="@array/agc_virtual_buttons_values" />
+            <GrxAppSelection
+                android:title="@string/app"
+                android:key="dlx_longpress_recents_app"
+                grx:systemType="system"
+                grx:depRule="ENABLE#dlx_longpress_recents#STRING#1"
+                grx:broadCast1="deluxe_update_keys"
+                grx:saveActivityname="true"
+                grx:showSystemapps="false" />
+        </PreferenceScreen>
+        <!-- Home -->
+        <PreferenceScreen android:title="@string/home">
+            <!-- Short press -->
+            <!--<GrxSingleSelection
+                android:title="@string/long_press"
+                android:key="dlx_shortpress_home"
+                android:defaultValue="0"
+                grx:broadCast1="deluxe_update_keys"
+                grx:optionsArray="@array/agc_virtual_buttons_entries"
+                grx:systemType="system"
+                grx:valuesArray="@array/agc_virtual_buttons_values" />
+            <GrxAppSelection
+                android:title="@string/app"
+                android:key="dlx_shortpress_home_app"
+                grx:systemType="system"
+                grx:depRule="ENABLE#dlx_shortpress_home#STRING#1"
+                grx:broadCast1="deluxe_update_keys"
+                grx:saveActivityname="true"
+                grx:showSystemapps="false" />-->
+            <!-- Long press -->
+            <GrxSingleSelection
+                android:title="@string/long_press"
+                android:key="dlx_longpress_home"
+                android:defaultValue="0"
+                grx:broadCast1="deluxe_update_keys"
+                grx:optionsArray="@array/agc_virtual_buttons_entries"
+                grx:systemType="system"
+                grx:valuesArray="@array/agc_virtual_buttons_values" />
+            <GrxAppSelection
+                android:title="@string/app"
+                android:key="dlx_longpress_home_app"
+                grx:systemType="system"
+                grx:depRule="ENABLE#dlx_longpress_home#STRING#1"
+                grx:broadCast1="deluxe_update_keys"
+                grx:saveActivityname="true"
+                grx:showSystemapps="false" />
+        </PreferenceScreen>
+        <!-- Back -->
+        <PreferenceScreen android:title="@string/back">
+            <!-- Short press -->
+            <!--<GrxSingleSelection
+                android:title="@string/long_press"
+                android:key="dlx_shortpress_back"
+                android:defaultValue="0"
+                grx:broadCast1="deluxe_update_keys"
+                grx:optionsArray="@array/agc_virtual_buttons_entries"
+                grx:systemType="system"
+                grx:valuesArray="@array/agc_virtual_buttons_values" />
+            <GrxAppSelection
+                android:title="@string/app"
+                android:key="dlx_shortpress_back_app"
+                grx:systemType="system"
+                grx:depRule="ENABLE#dlx_shortpress_back#STRING#1"
+                grx:broadCast1="deluxe_update_keys"
+                grx:saveActivityname="true"
+                grx:showSystemapps="false" />-->
+            <!-- Long press -->
+            <GrxSingleSelection
+                android:title="@string/long_press"
+                android:key="dlx_longpress_back"
+                android:defaultValue="0"
+                grx:broadCast1="deluxe_update_keys"
+                grx:optionsArray="@array/agc_virtual_buttons_entries"
+                grx:systemType="system"
+                grx:valuesArray="@array/agc_virtual_buttons_values" />
+            <GrxAppSelection
+                android:title="@string/app"
+                android:key="dlx_longpress_back_app"
+                grx:systemType="system"
+                grx:depRule="ENABLE#dlx_longpress_back#STRING#1"
+                grx:broadCast1="deluxe_update_keys"
+                grx:saveActivityname="true"
+                grx:showSystemapps="false" />
+        </PreferenceScreen>
+    </GrxPreferenceCategory>
 
-    <!-- Inicio -->
-    <PreferenceScreen android:title="@string/home">
-        <GrxSingleSelection
-            android:title="@string/long_press"
-            android:key="dlx_long_home_action"
-            android:defaultValue="0"
-            grx:broadCast1="dlx_remap"
-            grx:optionsArray="@array/agc_virtual_buttons_entries"
-            grx:systemType="system"
-            grx:valuesArray="@array/agc_virtual_buttons_values" />
-        <GrxAppSelection
-            android:title="@string/app"
-            android:key="dlx_long_home_app"
-            grx:systemType="system"
-            grx:depRule="ENABLE#dlx_long_home_action#STRING#1"
-            grx:broadCast1="dlx_remap"
-            grx:saveActivityname="true"
-            grx:showSystemapps="false" />
-        <GrxSingleSelection
-            android:title="@string/doubletap"
-            android:key="dlx_double_home_action"
-            android:defaultValue="0"
-            grx:broadCast1="dlx_remap"
-            grx:optionsArray="@array/agc_virtual_buttons_entries"
-            grx:systemType="system"
-            grx:valuesArray="@array/agc_virtual_buttons_values" />
-        <GrxAppSelection
-            android:title="@string/app"
-            android:key="dlx_double_home_app"
-            grx:systemType="system"
-            grx:depRule="ENABLE#dlx_double_home_action#STRING#1"
-            grx:broadCast1="dlx_remap"
-            grx:saveActivityname="true"
-            grx:showSystemapps="false" />
-    </PreferenceScreen>
+    <!-- Screen off -->
+    <GrxPreferenceCategory android:title="@string/screen_off">
+        <!-- Volume keys -->
+        <PreferenceScreen android:title="@string/volume_keys">
+            <GrxPreferenceCategory android:title="@string/skip_tracks_category">
+                <GrxSwitchPreference
+                    android:title="@string/enable_skip_tracks"
+                    android:key="b_skip_tracks"
+                    android:defaultValue="true" />
+                <GrxSeekBar
+                    android:title="@string/time_skip_tracks"
+                    android:dependency="b_skip_tracks"
+                    android:key="b_timeout_skip_tracks"
+                    android:defaultValue="500"
+                    grx:minValue="350"
+                    grx:maxValue="2000"
+                    grx:units=" mS"
+                    grx:showPopup="true"
+                    grx:interval="50"/>
+                <GrxInfoText android:summary="@string/info_skip_tracks" />
+                <GrxCheckBoxPreference
+                    android:title="@string/double_tap_skip_tracks"
+                    android:key="b_doble_click_skip_tracks"
+                    android:dependency="b_skip_tracks"
+                    android:defaultValue="true" />
+                <GrxSeekBar
+                    android:title="@string/time_dc_skip_tracks"
+                    android:dependency="b_doble_click_skip_tracks"
+                    android:key="b_timeout_dc_skip_tracks"
+                    android:defaultValue="500"
+                    grx:minValue="100"
+                    grx:maxValue="1000"
+                    grx:units=" mS"
+                    grx:showPopup="true"
+                    grx:interval="50"/>
+                <GrxCheckBoxPreference
+                    android:title="@string/vibrate_skip_tracks"
+                    android:key="b_vibrate_skip_tracks"
+                    android:summary="@string/vibrate_skip_tracks_summary"
+                    android:dependency="b_skip_tracks"
+                    android:defaultValue="false" />
+                <GrxSeekBar
+                    android:title="@string/vibrate_skip_intensity"
+                    android:dependency="b_vibrate_skip_tracks"
+                    grx:systemType="system"
+                    android:key="VIB_FEEDBACK_MAGNITUDE"
+                    android:defaultValue="2"
+                    grx:minValue="0"
+                    grx:maxValue="5"
+                    grx:units=""
+                    grx:showPopup="true"
+                    grx:interval="1"/>
+            </GrxPreferenceCategory>
+        </PreferenceScreen>
+    </GrxPreferenceCategory>
 
-    <!-- Retroceso -->
-    <PreferenceScreen android:title="@string/back">
-        <GrxSingleSelection
-            android:title="@string/long_press"
-            android:key="dlx_long_back_action"
-            android:defaultValue="0"
-            grx:broadCast1="dlx_remap"
-            grx:optionsArray="@array/agc_virtual_buttons_entries"
-            grx:systemType="system"
-            grx:valuesArray="@array/agc_virtual_buttons_values" />
-        <GrxAppSelection
-            android:title="@string/app"
-            android:key="dlx_long_back_app"
-            grx:systemType="system"
-            grx:depRule="ENABLE#dlx_long_back_action#STRING#1"
-            grx:broadCast1="dlx_remap"
-            grx:saveActivityname="true"
-            grx:showSystemapps="false" />
-    </PreferenceScreen>
+    <!-- &lt;!&ndash; Recientes &ndash;&gt;
+     <PreferenceScreen android:title="@string/recents">
+         <GrxSingleSelection
+             android:title="@string/long_press"
+             android:key="dlx_long_recent_action"
+             android:defaultValue="0"
+             grx:broadCast1="dlx_remap"
+             grx:optionsArray="@array/agc_virtual_buttons_entries"
+             grx:systemType="system"
+             grx:valuesArray="@array/agc_virtual_buttons_values" />
+         <GrxAppSelection
+             android:title="@string/app"
+             android:key="dlx_long_recent_app"
+             grx:systemType="system"
+             grx:depRule="ENABLE#dlx_long_recent_action#STRING#1"
+             grx:broadCast1="dlx_remap"
+             grx:saveActivityname="true"
+             grx:showSystemapps="false" />
+     </PreferenceScreen>
 
-    <!-- Bixby -->
-    <PreferenceScreen android:title="Bixby">
-        <GrxSingleSelection
-            android:title="@string/screenon_short"
-            android:key="dlx_bixby_short_on"
-            android:defaultValue="0"
-            grx:broadCast1="dlx_remap"
-            grx:optionsArray="@array/agc_virtual_buttons_entries"
-            grx:systemType="system"
-            grx:valuesArray="@array/agc_virtual_buttons_values" />
-        <GrxAppSelection
-            android:title="@string/screenon_app"
-            android:key="dlx_bixby_short_app_on"
-            grx:systemType="system"
-            grx:depRule="ENABLE#dlx_bixby_short_on#STRING#1"
-            grx:broadCast1="dlx_remap"
-            grx:saveActivityname="true"
-            grx:showSystemapps="false" />
-        <GrxSingleSelection
-            android:title="@string/screenoff_shortaction"
-            android:key="dlx_bixby_short_off"
-            android:defaultValue="0"
-            grx:broadCast1="dlx_remap"
-            grx:optionsArray="@array/agc_virtual_buttons_entries"
-            grx:systemType="system"
-            grx:valuesArray="@array/agc_virtual_buttons_values" />
-        <GrxAppSelection
-            android:title="@string/screenoff_app"
-            android:key="dlx_bixby_short_app_off"
-            grx:systemType="system"
-            grx:depRule="ENABLE#dlx_bixby_short_off#STRING#1"
-            grx:broadCast1="dlx_remap"
-            grx:saveActivityname="true"
-            grx:showSystemapps="false" />
-    </PreferenceScreen>
+     &lt;!&ndash; Inicio &ndash;&gt;
+     <PreferenceScreen android:title="@string/home">
+         <GrxSingleSelection
+             android:title="@string/long_press"
+             android:key="dlx_long_home_action"
+             android:defaultValue="0"
+             grx:broadCast1="dlx_remap"
+             grx:optionsArray="@array/agc_virtual_buttons_entries"
+             grx:systemType="system"
+             grx:valuesArray="@array/agc_virtual_buttons_values" />
+         <GrxAppSelection
+             android:title="@string/app"
+             android:key="dlx_long_home_app"
+             grx:systemType="system"
+             grx:depRule="ENABLE#dlx_long_home_action#STRING#1"
+             grx:broadCast1="dlx_remap"
+             grx:saveActivityname="true"
+             grx:showSystemapps="false" />
+         <GrxSingleSelection
+             android:title="@string/doubletap"
+             android:key="dlx_double_home_action"
+             android:defaultValue="0"
+             grx:broadCast1="dlx_remap"
+             grx:optionsArray="@array/agc_virtual_buttons_entries"
+             grx:systemType="system"
+             grx:valuesArray="@array/agc_virtual_buttons_values" />
+         <GrxAppSelection
+             android:title="@string/app"
+             android:key="dlx_double_home_app"
+             grx:systemType="system"
+             grx:depRule="ENABLE#dlx_double_home_action#STRING#1"
+             grx:broadCast1="dlx_remap"
+             grx:saveActivityname="true"
+             grx:showSystemapps="false" />
+     </PreferenceScreen>
+
+     &lt;!&ndash; Retroceso &ndash;&gt;
+     <PreferenceScreen android:title="@string/back">
+         <GrxSingleSelection
+             android:title="@string/long_press"
+             android:key="dlx_long_back_action"
+             android:defaultValue="0"
+             grx:broadCast1="dlx_remap"
+             grx:optionsArray="@array/agc_virtual_buttons_entries"
+             grx:systemType="system"
+             grx:valuesArray="@array/agc_virtual_buttons_values" />
+         <GrxAppSelection
+             android:title="@string/app"
+             android:key="dlx_long_back_app"
+             grx:systemType="system"
+             grx:depRule="ENABLE#dlx_long_back_action#STRING#1"
+             grx:broadCast1="dlx_remap"
+             grx:saveActivityname="true"
+             grx:showSystemapps="false" />
+     </PreferenceScreen>
+
+     &lt;!&ndash; Bixby &ndash;&gt;
+     <PreferenceScreen android:title="Bixby">
+         <GrxSingleSelection
+             android:title="@string/screenon_short"
+             android:key="dlx_bixby_short_on"
+             android:defaultValue="0"
+             grx:broadCast1="dlx_remap"
+             grx:optionsArray="@array/agc_virtual_buttons_entries"
+             grx:systemType="system"
+             grx:valuesArray="@array/agc_virtual_buttons_values" />
+         <GrxAppSelection
+             android:title="@string/screenon_app"
+             android:key="dlx_bixby_short_app_on"
+             grx:systemType="system"
+             grx:depRule="ENABLE#dlx_bixby_short_on#STRING#1"
+             grx:broadCast1="dlx_remap"
+             grx:saveActivityname="true"
+             grx:showSystemapps="false" />
+         <GrxSingleSelection
+             android:title="@string/screenoff_shortaction"
+             android:key="dlx_bixby_short_off"
+             android:defaultValue="0"
+             grx:broadCast1="dlx_remap"
+             grx:optionsArray="@array/agc_virtual_buttons_entries"
+             grx:systemType="system"
+             grx:valuesArray="@array/agc_virtual_buttons_values" />
+         <GrxAppSelection
+             android:title="@string/screenoff_app"
+             android:key="dlx_bixby_short_app_off"
+             grx:systemType="system"
+             grx:depRule="ENABLE#dlx_bixby_short_off#STRING#1"
+             grx:broadCast1="dlx_remap"
+             grx:saveActivityname="true"
+             grx:showSystemapps="false" />
+     </PreferenceScreen>-->
 
 </PreferenceScreen>
