--- a/app/src/main/res/values-es/values-es-grxsettings.xml
+++ b/app/src/main/res/values-es/values-es-grxsettings.xml
@@ -531,9 +531,21 @@
     </string-array>
 
     <!-- G93xF changelogs -->
+    <string name="changelog_021">Cambios v2.1</string>
     <string name="changelog_020">Cambios v2</string>
     <string name="changelog_010">Cambios v1</string>
 
+    <string-array name="changelog_021">
+        <item>Actualizadas apps Gear</item>
+        <item>Añadido remapeo inicio/recientes/retroceso</item>
+        <item>Añadido pasar canciones con teclas de volumen</item>
+        <item>Añadido doble toque a TouchWiz</item>
+        <item>Añadido máx. de toggles visibles en panel</item>
+        <item>Arregladas características CSC</item>
+        <item>Añadido bootanimation Deluxe®</item>
+        <item>16 escalas de animación en ajustes</item>
+        <item>Mejoras en DRC</item>
+    </string-array>
     <string-array name="changelog_020">
         <item>Rebasada sobre N935FXXU4CSC4</item>
         <item>Arreglados problemas de audio</item>
@@ -560,7 +572,7 @@
         <item>Tinta en fondos blancos</item>
     </string-array>
 
-    <string name="grxs_app_not_rooted">No root permission!</string>
+    <string name="grxs_app_not_rooted">Sin permiso root!</string>
 
     <string name="grxs_reset_all_prefs">Resetear valores</string>
     <string name="grxs_tit_reset_all_prefs">Resetear TODAS las opciones</string>
@@ -571,5 +583,15 @@
     <string name="grxs_restartphone">Reiniciar dispositivo</string>
     <string name="grxs_download_mode">Reiniciar en modo download</string>
     <string name="grxs_tools">Herramientas</string>
+
+    <string name="skip_tracks_category">Cambiar Pista Música en Pantalla Apagada</string>
+    <string name="info_skip_tracks">Play/Stop funciona si el teléfono no se encuentra en deep sleep y existe alguna aplicación que ha requerido el foco de audio al sistema (normalmente al arracar una app de música..). El sistema desactiva las teclas de volumen en deep sleep.</string>
+    <string name="enable_skip_tracks">Activar Cambio de Pistas</string>
+    <string name="double_tap_skip_tracks">Activa Doble click (Play/Stop)</string>
+    <string name="time_skip_tracks">Min. tiempo para long press</string>
+    <string name="time_dc_skip_tracks">Max. tiempo para doble click</string>
+    <string name="vibrate_skip_tracks">Vibrar con doble click/long press</string>
+    <string name="vibrate_skip_tracks_summary">El mod usa la intensidad definida en Respuesta de Vibración en settings. Sin embargo no necesitas tener activado el switch general Respuesta de vibración</string>
+    <string name="vibrate_skip_intensity">Intensidad Respuesta Vibración</string>
 
 </resources>
