--- a/app/src/main/res/values/values-grxsettings.xml
+++ b/app/src/main/res/values/values-grxsettings.xml
@@ -401,6 +401,7 @@
         <item>Record screen</item>
         <item>Screenshot</item>
         <item>Settings</item>
+        <item>DRC</item>
     </string-array>
     <string-array name="agc_reboot_values">
         <item>power</item>
@@ -415,6 +416,7 @@
         <item>screencapture</item>
         <item>screenshot</item>
         <item>settings</item>
+        <item>grxsettings</item>
     </string-array>
     <array name="drawables_icono_reinicio">
         <item>@drawable/stock</item>
@@ -868,12 +870,14 @@
         <item>@string/circularbt</item>
         <item>@string/carrier</item>
         <item>@string/clock</item>
+        <item>@string/sb_date</item>
         <item>@string/netspeed</item>
         <item>@string/mobile</item>
         <item>@string/wifi</item>
         <item>@string/airplane</item>
         <item>@string/nfc</item>
         <item>@string/bluetooth</item>
+        <item>@string/bluetooth_connected</item>
         <item>@string/alarm</item>
         <item>@string/cast</item>
         <item>@string/wifi_p2p</item>
@@ -898,12 +902,14 @@
         <item>circularbt</item>
         <item>carrier</item>
         <item>clock</item>
+        <item>sb_date</item>
         <item>netspeed</item>
         <item>mobile</item>
         <item>wifi</item>
         <item>airplane</item>
         <item>nfc_on</item>
         <item>bluetooth</item>
+        <item>bluetooth_connected</item>
         <item>alarm_clock</item>
         <item>cast</item>
         <item>wifi_p2p</item>
@@ -1620,22 +1626,24 @@
         <item>boosterwifi</item>
         <item>boostermobile</item>
         <item>boosteractivity</item>
+        <item>tint</item>
     </string-array>
 
     <string-array name="signal_color_entries">
-        <item>wifi</item>
-        <item>wifiarrows</item>
-        <item>signal</item>
-        <item>mobiletype</item>
-        <item>mobilearrows</item>
-        <item>roaming</item>
-        <item>airplane</item>
-        <item>vpn</item>
-        <item>eth</item>
-        <item>ethactivity</item>
-        <item>boosterwifi</item>
-        <item>boostermobile</item>
-        <item>boosteractivity</item>
+        <item>WiFi</item>
+        <item>WiFi arrows</item>
+        <item>Signal</item>
+        <item>Mobile type</item>
+        <item>Mobile arrows</item>
+        <item>Roaming</item>
+        <item>̶A̶i̶r̶p̶l̶a̶n̶e̶</item>
+        <item>̶V̶p̶n̶</item>
+        <item>̶E̶t̶h̶</item>
+        <item>̶E̶t̶h̶ ̶ ̶a̶c̶t̶i̶v̶i̶t̶y̶</item>
+        <item>̶B̶o̶o̶s̶t̶e̶r̶ ̶ ̶w̶i̶f̶i</item>
+        <item>̶B̶o̶o̶s̶t̶e̶r̶ ̶ ̶m̶o̶b̶i̶l̶e̶</item>
+        <item>̶B̶o̶o̶s̶t̶e̶r̶ ̶ ̶a̶c̶t̶i̶v̶i̶t̶y̶</item>
+        <item>Tint</item>
     </string-array>
 
     <string-array name="agc_signal_position_entries">
@@ -1875,6 +1883,7 @@
     <string-array name="sb_views_positions_options">
         <item>@string/carrier</item>
         <item>@string/clock</item>
+        <item>@string/sb_date</item>
         <item>@string/netspeed</item>
         <item>@string/systemicons</item>
         <item>@string/minitbattery</item>
@@ -1885,6 +1894,7 @@
     <string-array name="sb_views_positions_values">
         <item>simple_indicator_tag_lock_carrier_text_label</item>
         <item>status_bar_clock</item>
+        <item>sb_date</item>
         <item>netspeed</item>
         <item>statusicons</item>
         <item>minitbt</item>
@@ -1912,7 +1922,29 @@
     </string-array>
 
 
-    <string-array name="sb_postions_options">
+    <string-array name="sb_positions_options_dual">
+        <item>Left</item>
+        <item>Center</item>
+        <item>Right</item>
+        <item>Up - left (DUAL)</item>
+        <item>Up - center (DUAL)</item>
+        <item>Up - right (DUAL)</item>
+        <item>Absolute center (DUAL)</item>
+    </string-array>
+
+    <string-array name="sb_positions_values_dual">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
+
+
+    <string-array name="sb_positions_options">
+
         <item>Left</item>
         <item>Center</item>
         <item>Right</item>
@@ -1984,6 +2016,26 @@
     <string name="general_info">General information</string>
     <string name="features">Features</string>
     <string name="changelog">Changelog</string>
+
+    <string-array name="changelog_140">
+        <item>Rebased over N950FXXS5DSD5</item>
+        <item>Updated N950F ramdisk</item>
+        <item>Updated TW with previous mods</item>
+        <item>Fixed launch app on TW double tap</item>
+        <item>Added signal colors</item>
+        <item>Added battery and percentage colors</item>
+        <item>Added custom date to statusbar</item>
+        <item>Added custom background to statusbar</item>
+        <item>Added dual statusbar</item>
+        <item>Added bluetooth_connected to hidden icons</item>
+        <item>Added custom toggles</item>
+        <item>Added panel colors (Tiles, background, buttons, brightness…)</item>
+        <item>Added power menu and user icon switchs (on panel)</item>
+        <item>Added DRC to power menu</item>
+        <item>Added option to split power menu items or not</item>
+        <item>Added DRC,AppLock and VoLTE tiles</item>
+        <item>Rewritten power menu code to fix some minnor bugs</item>
+    </string-array>
 
     <string-array name="changelog_130">
         <item>Rebased over N950FXXS5DSC5</item>
@@ -2077,6 +2129,7 @@
         <item>Based on first N950F Beta</item>
     </string-array>
 
+    <string name="changelog_140">Changelog v14</string>
     <string name="changelog_130">Changelog v13</string>
     <string name="changelog_120">Changelog v12</string>
     <string name="changelog_114">Changelog v11.4</string>
@@ -2129,5 +2182,26 @@
     <string name="vibrate_skip_tracks">Vibrate on long and double click</string>
     <string name="vibrate_skip_tracks_summary">The mod uses system feedback vibration intensity, however it is not needed to enable main system switch for vibration feedback</string>
     <string name="vibrate_skip_intensity">Vibration Feedback Intensity</string>
+
+    <string name="notifications">Notifications</string>
+
+    <string name="bluetooth_connected">Bluetooth connected</string>
+
+    <string name="sb_date">Date</string>
+
+
+    <string-array name="sb_date_entries">
+        <item>@string/day</item>
+        <item>@string/month</item>
+        <item>@string/year</item>
+    </string-array>
+
+
+    <string-array name="sb_date_values">
+        <item>dd</item>
+        <item>MM</item>
+        <item>yy</item>
+    </string-array>
+
 
 </resources>
