--- a/app/src/main/res/layout/changelog_item.xml
+++ b/app/src/main/res/layout/changelog_item.xml
@@ -16,6 +16,14 @@
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"  android:orientation="vertical"
                 android:weightSum="1">
 
+                <!-- Changelog 14 -->
+                <TextView android:layout_width="wrap_content"  android:layout_height="wrap_content" android:gravity="center" android:layout_gravity="center"
+                    android:textSize="20sp" android:textStyle="bold" android:layout_margin="8dp"
+                    android:text="@string/changelog_140" android:textColor="?complemnt_accent_color"/>
+                <com.grx.settings.views.ArrayTextList
+                    android:layout_marginStart="18dp" android:layout_marginEnd="18dp"
+                    android:layout_width="match_parent" android:layout_height="wrap_content" grxA_entries="@array/changelog_140"/>
+
                 <!-- Changelog 13 -->
                 <TextView android:layout_width="wrap_content"  android:layout_height="wrap_content" android:gravity="center" android:layout_gravity="center"
                     android:textSize="20sp" android:textStyle="bold" android:layout_margin="8dp"
